--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "project2-fullstack",
   "version": "0.1.0",
   "description": "The group project 2 for coding bootcamp",
-  "main": "server.js",
+  "main": "app.js",
   "scripts": {
     "test": "mocha || exit 0",
-    "dev": "nodemon server.js",
-    "start": "nodemon server.js"
+    "dev": "nodemon app.js",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
